<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.simplemultilanguage.MainActivity">

    <item
        android:id="@+id/action_english"
        android:orderInCategory="100"
        android:title="@string/english"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spanish"
        android:orderInCategory="100"
        android:title="@string/spanish"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_french"
        android:orderInCategory="100"
        android:title="@string/french"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_russian"
        android:orderInCategory="100"
        android:title="@string/russian"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_arabic"
        android:orderInCategory="100"
        android:title="@string/arabic"
        app:showAsAction="never" />
</menu>
